--- a/playground/package.json
+++ b/playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@traderjoe-xyz/sdk-playground",
+  "name": "@dusalabs/sdk-playground",
   "license": "MIT",
   "version": "0.0.0",
   "scripts": {
