--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     ]
   },
   "dependencies": {
-    "@traderjoe-xyz/sdk": "^3.2.0",
+    "@massalabs/massa-web3": "^1.16.1",
     "jsbi": "^3.1.1",
     "lodash.flatmap": "^4.5.0",
     "tiny-invariant": "^1.1.0",
