--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@massalabs/massa-web3": "^1.16.1",
+    "big.js": "^6.2.1",
+    "decimal.js-light": "^2.5.1",
     "jsbi": "^3.1.1",
     "lodash.flatmap": "^4.5.0",
     "tiny-invariant": "^1.1.0",
