--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,12 @@
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+          "endOfLine": "auto"
+      }
+  ],
     "@typescript-eslint/no-explicit-any": "off"
   }
 }
