export ethers utility methods & upgrade massa-web3 to 1.17.5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "test"],
+  "include": ["src", "lib"],
   "compilerOptions": {
     "target": "es2018",
     "module": "esnext",
