--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,14 +9,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
+  lint_and_test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
       - run: npm run lint
 
-  unit-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: npm test
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Linting
+        run: npm run lint
+
+      - name: Testing
+        run: npm test
