--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:fix": "npx lint --fix",
     "build": "tsdx build",
     "start": "tsdx watch",
-    "test": "tsdx test",
+    "test": "vitest --config ./vitest.config.ts",
     "prepublishOnly": "tsdx build"
   },
   "lint-staged": {
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@massalabs/massa-web3": "^1.23.0",
-    "big.js": "^6.2.1",
+    "big.js": "5.2",
     "decimal.js-light": "^2.5.1",
     "jsbi": "^3.1.1",
     "lodash.flatmap": "^4.5.0",
@@ -45,9 +45,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
+    "node-fetch": "^3.3.2",
     "prettier": "^2.8.3",
     "tsdx": "^0.12.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.33.0"
   },
   "engines": {
     "node": ">=10"
