--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dist"
   ],
   "repository": "https://github.com/dusaprotocol/sdk",
-  "type": "module",
   "module": "dist/sdk.esm.js",
   "scripts": {
     "lint": "eslint --ext .ts --ext .tsx src/",
@@ -50,6 +49,9 @@
     "tsdx": "^0.12.3",
     "typescript": "^4.9.4",
     "vitest": "^0.33.0"
+  },
+  "peerDependencies": {
+    "@massalabs/massa-web3": ">1.23.0"
   },
   "engines": {
     "node": ">=10"
