--- a/playground/package.json
+++ b/playground/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "cd .. && npm link && cd playground && npm link @dusalabs/sdk",
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
