--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dusalabs/sdk",
   "license": "MIT",
-  "version": "0.0.4-1",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
