--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     ]
   },
   "dependencies": {
-    "@massalabs/massa-web3": "^1.23.0",
-    "@massalabs/web3-utils": "^1.4.1",
+    "@massalabs/massa-web3": "1.21",
     "big.js": "5.2",
     "decimal.js-light": "^2.5.1",
     "tiny-invariant": "^1.1.0",
