--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
     ]
   },
   "dependencies": {
-    "@massalabs/massa-web3": "^1.24.2",
-    "big.js": "5.2",
+    "@massalabs/massa-web3": "^1.24.4",
+    "big.js": "~6.2.1",
     "decimal.js-light": "^2.5.1",
-    "tiny-invariant": "^1.1.0",
+    "tiny-invariant": "^1.3.1",
     "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0"
   },
   "devDependencies": {
-    "@types/big.js": "^4.0.5",
-    "@types/jest": "^24.0.25",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/big.js": "^6.2.2",
+    "@types/jest": "^24.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.3.0",
     "node-fetch": "^3.3.2",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.8",
     "tsdx": "^0.12.3",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "vitest": "^0.33.0"
   },
   "engines": {
