--- a/playground/package.json
+++ b/playground/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "postinstall": "cd .. && npm run build && npm link && cd playground && npm link @dusalabs/sdk",
+    "postinstall": "cd .. && pnpm build && npm link && cd playground && npm link @dusalabs/sdk",
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
