--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     ]
   },
   "dependencies": {
-    "@massalabs/massa-web3": "^1.24.4",
+    "@massalabs/massa-web3": "^2.2.7",
+    "@massalabs/web3-utils": "^1.4.4",
     "big.js": "~6.2.1",
     "decimal.js-light": "^2.5.1",
     "tiny-invariant": "^1.3.1",
