--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -17,9 +17,5 @@
     "exclude": [
       "node_modules"
     ],
-    "experimentalDecorators": true,
-    "ts-node": {
-      "esm": true,
-      "experimentalSpecifierResolution": "node"
-    }
+    "experimentalDecorators": true
   }
