--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "tsdx watch",
     "test:unit": "vitest --config ./vitest.config.ts",
     "test:e2e": "cd playground && npm start",
-    "test": "pnpm test:unit -- run && pnpm test:e2e",
+    "test": "npm run test:unit -- run && pnpm test:e2e",
     "prepublishOnly": "tsdx build && npm test"
   },
   "lint-staged": {
