--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           run_install: false
 
       - name: Install dependencies
-        run: pnpm i && cd playground && pnpm i
+        run: pnpm i
 
       - name: Linting
         run: pnpm lint
