--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "build": "tsdx build",
     "start": "tsdx watch",
     "test:unit": "vitest --config ./vitest.config.ts",
-    "test:e2e": "cd playground && npm start",
+    "test:e2e": "cd playground && pnpm i && npm start",
     "test": "npm run test:unit -- run && pnpm test:e2e",
-    "prepublishOnly": "tsdx build && cd playground && pnpm i && npm test"
+    "prepublishOnly": "npm test"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
