--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     ]
   },
   "dependencies": {
-    "@massalabs/massa-web3": "^4.0.3",
-    "@massalabs/web3-utils": "^1.4.7",
+    "@massalabs/massa-web3": "5.0.0-next.20241024082627",
+    "@massalabs/web3-utils": "2.0.0-next.20240527122315",
     "big.js": "~6.2.1",
     "decimal.js-light": "^2.5.1",
     "tiny-invariant": "^1.3.1",
