--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "dependencies": {
-    "@massalabs/massa-web3": "5.0.0-next.20241029113944",
+    "@massalabs/massa-web3": "^5.0.0",
     "big.js": "~6.2.1",
     "decimal.js-light": "^2.5.1",
     "tiny-invariant": "^1.3.1",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/big.js": "^6.2.2",
+    "@types/node": "^22.8.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
