--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "dependencies": {
-    "@massalabs/massa-web3": "^5.0.0",
+    "@massalabs/massa-web3": "5.1.2-dev.20250408074543",
     "big.js": "~6.2.1",
     "decimal.js-light": "^2.5.1",
     "tiny-invariant": "^1.3.1",
